deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-infra
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1
  namespace: test-infra
spec:
  selector:
    app: frontend-v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: backend-v1
  namespace: test-infra
spec:
  selector:
    app: backend-v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2
  namespace: test-infra
spec:
  selector:
    app: frontend-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: backend-v2
  namespace: test-infra
spec:
  selector:
    app: backend-v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  namespace: test-infra
  labels:
    app: frontend-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-v1
  template:
    metadata:
      labels:
        app: frontend-v1
    spec:
      containers:
      - name: frontend-v1
        image: nicholasjackson/fake-service:v0.26.2
        ports:
        - containerPort: 9090
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  namespace: test-infra
  labels:
    app: frontend-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-v2
  template:
    metadata:
      labels:
        app: frontend-v2
    spec:
      containers:
      - name: frontend-v2
        image: nicholasjackson/fake-service:v0.26.2
        ports:
        - containerPort: 9090
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: test-infra
  labels:
    app: backend-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-v1
  template:
    metadata:
      labels:
        app: backend-v1
    spec:
      containers:
      - name: backend-v1
        image: nicholasjackson/fake-service:v0.26.2
        ports:
        - containerPort: 9090
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  namespace: test-infra
  labels:
    app: backend-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-v2
  template:
    metadata:
      labels:
        app: backend-v2
    spec:
      containers:
      - name: backend-v2
        image: nicholasjackson/fake-service:v0.26.2
        ports:
        - containerPort: 9090
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
